remove unsupported java feature